jsonapi_core/tests/compile_fail/missing_id.rs
use jsonapi_core::JsonApi;

#[derive(JsonApi)]
#[jsonapi(type = "things")]
struct Bad {
    name: String,
}

fn main() {}
