jsonapi_core/tests/compile_fail/missing_id.stderr
error: exactly one #[jsonapi(id)] field is required
 --> tests/compile_fail/missing_id.rs:5:8
  |
5 | struct Bad {
  |        ^^^
